Revert "Correct some layout issues"
This reverts commit 7074d1f7f29013d1caf43b0a867570ccebc98756.

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ nav>a{
 }
 .slogan{
     width: 15rem;
-    max-width: 50%;
     margin: 2rem;
     color: var(--text-dark);
 }
